name:                Haskell-Parser
version:             8.0.2
synopsis:            Stand-Alone Parser from GHC
description:         A stand-alone parser derived from GHC
homepage:            https://github.com/shayan-najd/Haskell-Parser
license:             BSD3
license-file:        LICENSE
author:              Shayan-Najd
maintainer:          sh.najd@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  ChangeLog.md,
  README.md

library
  exposed-modules:
    OccName,
    Lexer,
    Module,
    HsDecls,
    Ctype,
    FieldLabel,
    RdrName,
    Parser,
    HsBinds,
    Lexeme,
    HsPat,
    HsUtils,
    HsExpr,
    HsTypes,
    HsDoc,
    HsSyn,
    ForeignCall,
    Name,
    HsImpExp,
    SrcLoc,
    HaddockUtils,
    ApiAnnotation,
    HsLit,
    RdrHsSyn,
    BooleanFormula,
    U.Outputable,
    U.BufWrite,
    U.Unique,
    U.OrdList,
    U.DynFlags,
    U.Binary,
    U.Bag,
    U.Panic,
    U.Encoding,
    U.BasicTypes,
    U.UniqSet,
    U.Maybes,
    U.StringBuffer,
    U.Util,
    U.FastMutInt,
    U.Exception,
    U.MonadUtils,
    U.ErrUtils,
    U.Pretty,
    U.UniqDFM,
    U.FastFunctions,
    U.UniqFM,
    U.FastString,
    U.Fingerprint,
    U.FastStringEnv
  other-extensions:
    DeriveDataTypeable,
    BangPatterns,
    CPP,
    RecordWildCards,
    MultiParamTypeClasses,
    DeriveFunctor,
    DeriveFoldable,
    DeriveTraversable,
    StandaloneDeriving,
    FlexibleContexts,
    UndecidableInstances,
    ConstraintKinds,
    FlexibleInstances,
    TypeFamilies,
    ScopedTypeVariables,
    ExistentialQuantification,
    TypeSynonymInstances,
    ImplicitParams,
    MagicHash,
    UnboxedTuples,
    KindSignatures,
    GeneralizedNewtypeDeriving
  build-depends:
    base >=4.9 && <4.10,
    containers >=0.5 && <0.6,
    ghc-boot-th == 8.0.1,
    bytestring >=0.10 && <0.11,
    array >=0.5 && <0.6,
    filepath >=1.4 && <1.5,
    time >=1.6 && <1.7,
    unix >=2.7 && <2.8,
    transformers >=0.5 && <0.6,
    directory >=1.2 && <1.3
  build-tools:
    alex,
    happy
  default-language:
    Haskell2010
