name:                Haskell-Parser
version:             8.0.2
synopsis:            Stand-Alone Parser from GHC
description:         A stand-alone parser derived from GHC
homepage:            https://github.com/shayan-najd/Haskell-Parser
license:             BSD3
license-file:        LICENSE
author:              Shayan-Najd
maintainer:          sh.najd@gmail.com
category:            Language
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  ChangeLog.md,
  README.md

library
  exposed-modules:
    Parser,
    Lexer,
    OccName,
    Ctype,
    RdrName,
    HaddockUtils,
    ApiAnnotation,
    Lexeme,
    RdrHsSyn,
    S.Module,
    S.HsDecls,
    S.FieldLabel,
    S.HsBinds,
    S.HsPat,
    S.HsUtils,
    S.HsExpr,
    S.HsTypes,
    S.HsDoc,
    S.HsSyn,
    S.ForeignCall,
    S.HsImpExp,
    S.SrcLoc,
    S.HsLit,
    S.BasicTypes,
    S.BooleanFormula,
    U.Outputable,
    U.BufWrite,
    U.Unique,
    U.OrdList,
    U.DynFlags,
    U.Bag,
    U.Panic,
    U.Encoding,
    U.StringBuffer,
    U.Util,
    U.FastMutInt,
    U.Exception,
    U.ErrUtils,
    U.Pretty,
    U.FastFunctions,
    U.UniqFM,
    U.FastString,
    ShowInstances,
    OutputableInstances
  other-extensions:
    DeriveDataTypeable,
    BangPatterns,
    CPP,
    RecordWildCards,
    MultiParamTypeClasses,
    DeriveFunctor,
    DeriveFoldable,
    DeriveTraversable,
    StandaloneDeriving,
    FlexibleContexts,
    UndecidableInstances,
    ConstraintKinds,
    FlexibleInstances,
    TypeFamilies,
    ScopedTypeVariables,
    ExistentialQuantification,
    TypeSynonymInstances,
    ImplicitParams,
    MagicHash,
    UnboxedTuples,
    KindSignatures,
    GeneralizedNewtypeDeriving
  build-depends:
    base >=4.9 && <4.10,
    containers >=0.5 && <0.6,
    ghc-boot-th == 8.0.1,
    bytestring >=0.10 && <0.11,
    array >=0.5 && <0.6,
    filepath >=1.4 && <1.5
  build-tools:
    alex,
    happy
  default-language:
    Haskell2010
